--- a/ugc.html
+++ b/ugc.html
@@ -49,7 +49,7 @@
       <a class="brand" href="index.html">ugc with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">EMAIL ME NOW</a></li>
+          <li><a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">WORK WITH ME</a></li>
         </ul>
       </nav>
     </div>
@@ -93,11 +93,10 @@
 
   <!-- Intro Section -->
   <section class="intro container">
-    <h2>Welcome to my UGC Portfolio!</h2>
+    <h2>You've come to the right place</h2>
     <p class="intro-text">
-      If you're looking for a results-driven creator dedicated to making high-converting videos, you've come to the right place. Let's get a positive ROI with UGC. Click on my intro video below to get started and email me today.
-</p>
-<a class="cta-btn" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME TODAY
+      Let's get a positive ROI with UGC today.<br/><em>Click on my intro video below to get started today.</em> 
+<a class="cta-btn" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME
 </a>  
 </section>
 
@@ -135,7 +134,6 @@
 
 <!-- =================== UGC Reel Strip =================== -->
 <section class="ugc-reel-section" aria-label="UGC vertical samples">
-<h2>You've come to the right place.</h2>
 
 <!-- 1. TESTIMONIAL · INTRO -->
   <article class="ugc-card">
@@ -236,6 +234,9 @@
     </p>
     <p>
     ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.</p>
+    <p>
+    <p>
+    ✅ Expert Biochemist | Passionate about promoting high-quality health & wellness products.</p>
     <p>
     <p>
     ✅ Results-driven | Focused on boosting conversions & engagement for short or long-form content.</p>
@@ -353,26 +354,15 @@
   <div class="founder-overlay"></div>
   <div class="founder-inner container">
     <h2>meet the creator</h2>
-      <p>
-    🐻 PhD in Molecular Biology 🧬 from UC Berkeley</p>
-      <p> 
-    🇳🇴 Born in Norway</p>
-      <p>
-    🇨🇿 🇬🇭Czech & Ghanaian Heritage</p>
- 
-<p> 🌴
-    LA Girlie | SF Techie 🌁</p>
-
-<p> 🧘🏿‍♀️
-    Certified Yoga Instructor</p>
-      <p>
-    👭 Oldest of 6 siblings</p>
-      <p>
-    <p>🏆 Triathlete</p>
-      <p>
-    🍓🍌 Smoothie Lover</p>
-<p>
-    📩 lisa@ugcwithlisaeshunwilson.com</p>
+      <p>🍾Go-to party-planner for my girls!</p>
+      <p>💸Finance oracle for the fam | Let's talk Roth IRA, crypto & more!</p>
+      <p>🌁Living and working in SF</p>
+      <p>🧬Science Creator | PhD in Molecular Biology from UC Berkeley</p>
+      <p>🧘🏿<200d>♀️Yoga Creator | Certified Yoga Instructor</p>
+      <p>👧🏽👧🏾Big Sister Creator | Oldest of 6 siblings | Extra UGC Models!</p>
+      <p>🏆Triathlete & Avid Runner</p>
+      <p>🎀👧🏾Black and Female Creator</p>
+      <p>📩 lisa@ugcwithlisaeshunwilson.com</p>
     <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry">LET'S TALK</a>
   </div>
 </section>
