UGC Work with Me Button

--- a/ugc.html
+++ b/ugc.html
@@ -93,9 +93,7 @@
 
   <!-- Intro Section -->
   <section class="intro container">
-    <h2>You've come to the right place</h2>
-    <p class="intro-text">
-      Let's get a positive ROI with UGC today.<br/><em>Click on my intro video below to get started today.</em> 
+    <h2>You've come to the right place.</h2> 
 <a class="cta-btn" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME
 </a>  
 </section>
