--- a/ugc.html
+++ b/ugc.html
@@ -46,7 +46,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="index.html">ugc with lisa</a>     
+      <a class="brand" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">ugc with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
           <li><a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">WORK WITH ME</a></li>
