More Work with Me Buttons

--- a/ugc.html
+++ b/ugc.html
@@ -223,7 +223,7 @@
 
 <!-- =================== UGC Offer Banner =================== -->
 <section class="membership" aria-label="membership">
-  <div class="membership-media" style="background-image:url('images/ucg-membership.jpg')"></div>
+  <div class="membership-media" style="background-image:url('images/membership.jpg')"></div>
   <div class="membership-overlay"></div>
   <div class="membership-inner container">
     <h2>Why work with me?</h2>
@@ -242,7 +242,7 @@
     ✅ Psychology-Driven Marketing | Strong hooks, engaging edits, and retention tactics.</p>
     <p>
     ✅ Fast & Reliable | Quick turnaround with high-quality results.</p>
-    <a class="btn btn-pill btn-outline" href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry">LET'S CHAT</a>
+    <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilsoncom?subject=UGC%20Collaboration%20Inquiry">WORKWITHME</a>
   </div>
 </section>
 
@@ -250,8 +250,8 @@
 <section class="ig card" aria-label="Instagram">
   <div class="ig-head">
     <h3>your brand + lisa</h3>
-    <a class="btn btn-pill btn-outline" href="https://instagram.com/ugcwithlisaeshunwilson/" target="_blank" rel="noopener">
-      FIND US ON SOCIAL
+    <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry" target="_blank" rel="noopener">
+      WORK WITH ME
     </a>
   </div>
 
@@ -300,8 +300,8 @@
 <section class="ig card" aria-label="Instagram">
   <div class="ig-head">
     <h3>a little more about lisa</h3>
-    <a class="btn btn-pill btn-outline" href="https://instagram.com/lisaeshunwilson/" target="_blank" rel="noopener">
-      FIND ME ON SOCIAL
+    <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry" target="_blank" rel="noopener">
+      WORK WITH ME
     </a>
   </div>
 
@@ -361,7 +361,7 @@
       <p>🏆Triathlete & Avid Runner</p>
       <p>🎀👧🏾Black and Female Creator</p>
       <p>📩 lisa@ugcwithlisaeshunwilson.com</p>
-    <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry">LET'S TALK</a>
+    <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry">WORK WITH ME</a>
   </div>
 </section>
 
