--- a/ugc.html
+++ b/ugc.html
@@ -93,9 +93,7 @@
 
   <!-- Intro Section -->
   <section class="intro container">
-    <h2>You've come to the right place.</h2> 
-<a class="cta-btn" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME
-</a>  
+    <h2>You've come to the right place.</h2>   
 </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -356,7 +354,7 @@
       <p>💸Finance oracle for the fam | Let's talk Roth IRA, crypto & more!</p>
       <p>🌁Living and working in SF</p>
       <p>🧬Science Creator | PhD in Molecular Biology from UC Berkeley</p>
-      <p>🧘🏿<200d>♀️Yoga Creator | Certified Yoga Instructor</p>
+      <p>🧘🏽‍♀️Yoga Creator | Certified Yoga Instructor</p>
       <p>👧🏽👧🏾Big Sister Creator | Oldest of 6 siblings | Extra UGC Models!</p>
       <p>🏆Triathlete & Avid Runner</p>
       <p>🎀👧🏾Black and Female Creator</p>
