New ugc photos for photography section

--- a/ugc.html
+++ b/ugc.html
@@ -247,7 +247,7 @@
 <!-- =================== Instagram Carousel =================== -->
 <section class="ig card" aria-label="Instagram">
   <div class="ig-head">
-    <h3>your brand + lisa</h3>
+    <h3>ugc photography</h3>
     <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry" target="_blank" rel="noopener">
       WORK WITH ME
     </a>
