--- a/ugc.html
+++ b/ugc.html
@@ -356,7 +356,7 @@
       <p>🧬Science Creator | PhD in Molecular Biology from UC Berkeley</p>
       <p>🧘🏽‍♀️Yoga Creator | Certified Yoga Instructor</p>
       <p>👧🏽👧🏾Big Sister Creator | Oldest of 6 siblings | Extra UGC Models!</p>
-      <p>🏆Triathlete & Avid Runner</p>
+      <p>🏆Triathlete, 🎿Skiier, 🧗🏽‍♀️Climber, & 🏕️Backcountry Hiker</p>
       <p>🎀👧🏾Black and Female Creator</p>
       <p>📩 lisa@ugcwithlisaeshunwilson.com</p>
     <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry">WORK WITH ME</a>
