Updates to style for taupe header fix and centering videos

--- a/ugc.html
+++ b/ugc.html
@@ -42,7 +42,7 @@
 <meta name="twitter:image" content="https://www.yogawithlisa.ai/images/ugc.jpg">
 </head>
 
-<body>
+<body class="page-ugc">
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
@@ -232,7 +232,9 @@
     ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.</p>
     <p>
     <p>
-    ✅ Expert Biochemist | Passionate about promoting high-quality health & wellness products.</p>
+    ✅ Expert Biochemist | Promote high-quality health-related products or services & pharmaceuticals.</p>
+<p>
+    ✅ Certified Yoga Instructor | Showcase top-tier yoga & wellness products or services.</p>
     <p>
     <p>
     ✅ Results-driven | Focused on boosting conversions & engagement for short or long-form content.</p>
@@ -354,7 +356,7 @@
       <p>💸Finance oracle for the fam | Let's talk Roth IRA, crypto & more!</p>
       <p>🌁Living and working in SF</p>
       <p>🧬Science Creator | PhD in Molecular Biology from UC Berkeley</p>
-      <p>🧘🏽‍♀️Yoga Creator | Certified Yoga Instructor</p>
+      <p>🧘🏽‍♀️Yoga Creator | Yoga Alliance Certified | 200-hour</p>
       <p>👧🏽👧🏾Big Sister Creator | Oldest of 6 siblings | Extra UGC Models!</p>
       <p>🏆Triathlete, 🎿Skiier, 🧗🏽‍♀️Climber, & 🏕️Backcountry Hiker</p>
       <p>🎀👧🏾Black and Female Creator</p>
