Update UGC hero section

--- a/ugc-iteration1.html
+++ b/ugc-iteration1.html
@@ -55,58 +55,41 @@
     </div>
   </header>
 
-<!-- Hero (UGC landing) -->
-<section class="ugc-hero" role="banner" aria-label="UGC hero">
-  <div class="ugc-hero-inner">
+  <!-- Hero (image) -->
+  <section class="hero hero--image" role="banner" aria-label="Hero">
+    <!-- Set your image at images/hero-ugc.jpg -->
+    <div class="hero-media" style="background-image:url('images/hero-ugc.jpg');" aria-hidden="true"></div>
+    <div class="hero-overlay" aria-hidden="true"></div>
 
-    <!-- Left: Intro video (what people see immediately) -->
-    <div class="ugc-hero-video">
-      <video
-        class="ugc-hero-video-el"
-        src="images/ugc-intro.mp4"
-        poster="images/ugc-intro-poster.jpg"
-        playsinline
-        muted
-        controls>
-      </video>
+    <div class="hero-inner">
+      <h1 class="display">
+  	<span class="nowrap"><em>Lisa Eshun-Wilson</em></span><br/>
+  	<span class="nowrap">UGC <em>Creator</em></span><br/> & Strategist   
+      </h1>
+
+  <div class="ugc-social-icons">
+
+  <a href="https://www.instagram.com/ugcwithlisaeshunwilson" target="_blank" class="icon-btn">
+    <img src="images/icons/instagram.svg" alt="Instagram">
+  </a>
+
+  <a href="https://www.tiktok.com/ugcwithlisaeshunwilson" target="_blank" class="icon-btn">
+    <img src="images/icons/tiktok.svg" alt="TikTok">
+  </a>
+
+  <a href="https://twitter.com/ugcwithlisawilson" target="_blank" class="icon-btn">
+    <img src="images/icons/x-twitter.svg" alt="Twitter/X">
+  </a>
+
+  <a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="icon-btn">
+    <img src="images/icons/email.svg" alt="Email">
+  </a>
+</div>  
+
+   </a>
+   </div>
     </div>
-
-    <!-- Right: Name + title + location + blurb + icons -->
-    <div class="ugc-hero-copy">
-      <h1 class="ugc-hero-name">Lisa Eshun-Wilson</h1>
-
-      <div class="ugc-hero-title">UGC Creator &amp; Strategist</div>
-
-      <div class="ugc-hero-location">
-        <span class="ugc-pin" aria-hidden="true">📍</span>
-        San Francisco, CA
-      </div>
-
-      <p class="ugc-hero-blurb">
-        UGC strategist, scriptwriter, and creator behind high-converting videos trusted by brands worldwide.
-      </p>
-
-      <div class="ugc-social-icons">
-        <a href="https://www.instagram.com/ugcwithlisaeshunwilson" target="_blank" rel="noopener" class="icon-btn">
-          <img src="images/icons/instagram.svg" alt="Instagram">
-        </a>
-
-        <a href="https://www.tiktok.com/@ugcwithlisaeshunwilson" target="_blank" rel="noopener" class="icon-btn">
-          <img src="images/icons/tiktok.svg" alt="TikTok">
-        </a>
-
-        <a href="https://twitter.com/ugcwithlisawilson" target="_blank" rel="noopener" class="icon-btn">
-          <img src="images/icons/x-twitter.svg" alt="Twitter/X">
-        </a>
-
-        <a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="icon-btn">
-          <img src="images/icons/email.svg" alt="Email">
-        </a>
-      </div>
-    </div>
-
-  </div>
-</section>
+  </section>
 
   <!-- Intro Section -->
   <section class="intro container">
@@ -377,34 +360,6 @@
 
     <button class="ig-nav ig-next" aria-label="Next">›</button>
   </div>
-</section>
-
-<!-- ==================== Connect ==================== -->
-<section class="ugc-connect" aria-label="Connect with Lisa">
-  <h2 class="ugc-connect-title">CONNECT WITH ME</h2>
-
-  <div class="ugc-connect-card">
-    <img class="ugc-connect-photo" src="images/connect-lisa.jpg" alt="Lisa Eshun-Wilson">
-  </div>
-
-  <div class="ugc-connect-icons">
-    <a href="https://www.tiktok.com/@ugcwithlisaeshunwilson" target="_blank" rel="noopener" class="ugc-connect-icon">
-      <img src="images/icons/tiktok.svg" alt="TikTok">
-    </a>
-    <a href="https://www.instagram.com/ugcwithlisaeshunwilson" target="_blank" rel="noopener" class="ugc-connect-icon">
-      <img src="images/icons/instagram.svg" alt="Instagram">
-    </a>
-    <a href="https://twitter.com/ugcwithlisawilson" target="_blank" rel="noopener" class="ugc-connect-icon">
-      <img src="images/icons/x-twitter.svg" alt="Twitter/X">
-    </a>
-    <a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="ugc-connect-icon">
-      <img src="images/icons/email.svg" alt="Email">
-    </a>
-  </div>
-
-  <a class="ugc-connect-email" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">
-    LISA@UGCWITHLISAESHUNWILSON.COM
-  </a>
 </section>
 
   <footer class="site-footer">
