Update UGC intro video sizing

--- a/ugc.html
+++ b/ugc.html
@@ -83,7 +83,7 @@
       </div>
 
       <p class="ugc-hero-blurb">
-        UGC strategist, scriptwriter, and creator behind high-converting videos trusted by brands worldwide.
+        UGC creator and strategist with 5+ years of content creation experience.
       </p>
 
       <div class="ugc-social-icons">
@@ -148,23 +148,7 @@
 <!-- =================== UGC Reel Strip =================== -->
 <section class="ugc-reel-section" aria-label="UGC vertical samples">
 
-<!-- 1. TESTIMONIAL · INTRO -->
-  <article class="ugc-card">
-    <div class="ugc-phone">
-      <button type="button" class="ugc-tag">intro | welcome</button>
-      <video
-        class="ugc-video"
-        src="images/ugc-intro.mp4"
-        poster="images/ugc-intro-poster.jpg"
-        playsinline
-        muted
-        controls
-      ></video>
-    </div>
-  </article>
-</section>
-
-<!-- 2. SKIT · CADENCE -->
+<!-- 1. SKIT · CADENCE -->
   <article class="ugc-card">
     <div class="ugc-phone">
       <button type="button" class="ugc-tag">skit | travel</button>
@@ -180,7 +164,7 @@
   </article>
 </section>
 
-<!-- 3. PRODUCT DEMO · CREST WHITENING STRIPS -->
+<!-- 2. PRODUCT DEMO · CREST WHITENING STRIPS -->
   <article class="ugc-card">
     <div class="ugc-phone">
       <button type="button" class="ugc-tag">product demo | whitening strips</button>
@@ -194,7 +178,7 @@
     </div>
   </article>
 
-<!-- 4. TESTIMONIAL · LIP BUTTER -->
+<!-- 3. TESTIMONIAL · LIP BUTTER -->
   <article class="ugc-card">
     <div class="ugc-phone">
       <button type="button" class="ugc-tag">testimonial | lips</button>
@@ -208,7 +192,7 @@
     </div>
   </article>
 
-<!-- 5. BROLL w VO · ALO -->
+<!-- 4. BROLL w VO · ALO -->
   <article class="ugc-card">
     <div class="ugc-phone">
       <button type="button" class="ugc-tag">broll wVO | athleisure </button>
@@ -222,7 +206,7 @@
     </div>
   </article>
 
-<!-- 6. GREENSCREEN · SPROUT -->
+<!-- 5. GREENSCREEN · SPROUT -->
   <article class="ugc-card">
     <div class="ugc-phone">
       <button type="button" class="ugc-tag">greenscreen | app</button>
@@ -388,13 +372,13 @@
   </div>
 
   <div class="ugc-connect-icons">
-    <a href="https://www.tiktok.com/@ugcwithlisaeshunwilson" target="_blank" rel="noopener" class="ugc-connect-icon">
+    <a href="https://www.tiktok.com/@ugcwithlisaeshunwilson?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener" class="ugc-connect-icon">
       <img src="images/icons/tiktok.svg" alt="TikTok">
     </a>
     <a href="https://www.instagram.com/ugcwithlisaeshunwilson" target="_blank" rel="noopener" class="ugc-connect-icon">
       <img src="images/icons/instagram.svg" alt="Instagram">
     </a>
-    <a href="https://twitter.com/ugcwithlisawilson" target="_blank" rel="noopener" class="ugc-connect-icon">
+    <a href="https://x.com/ugcwithlis42488" target="_blank" rel="noopener" class="ugc-connect-icon">
       <img src="images/icons/x-twitter.svg" alt="Twitter/X">
     </a>
     <a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="ugc-connect-icon">
