UGC Globetrotter Info

--- a/ugc.html
+++ b/ugc.html
@@ -151,7 +151,7 @@
 <!-- 1. SKIT · CADENCE -->
   <article class="ugc-card">
     <div class="ugc-phone">
-      <button type="button" class="ugc-tag">skit | travel</button>
+      <button type="button" class="ugc-tag">skit | cadence travel</button>
       <video
         class="ugc-video"
         src="images/ugc-cadence.mp4"
@@ -167,7 +167,7 @@
 <!-- 2. PRODUCT DEMO · CREST WHITENING STRIPS -->
   <article class="ugc-card">
     <div class="ugc-phone">
-      <button type="button" class="ugc-tag">product demo | whitening strips</button>
+      <button type="button" class="ugc-tag">product demo | crest whitening strips</button>
       <video class="ugc-video"
         src="images/ugc-crest.mp4"
         poster="images/ugc-crest-poster.jpg"
@@ -181,7 +181,7 @@
 <!-- 3. TESTIMONIAL · LIP BUTTER -->
   <article class="ugc-card">
     <div class="ugc-phone">
-      <button type="button" class="ugc-tag">testimonial | lips</button>
+      <button type="button" class="ugc-tag">testimonial | rich lips butter</button>
       <video class="ugc-video"
         src="images/ugc-lipbutter.mp4"
         poster="images/ugc-lipbutter-poster.jpg"
@@ -195,7 +195,7 @@
 <!-- 4. BROLL w VO · ALO -->
   <article class="ugc-card">
     <div class="ugc-phone">
-      <button type="button" class="ugc-tag">broll wVO | athleisure </button>
+      <button type="button" class="ugc-tag">broll wVO | alo airlift</button>
       <video class="ugc-video"
         src="images/ugc-alo.mp4"
         poster="images/ugc-alo-poster.jpg"
@@ -209,7 +209,7 @@
 <!-- 5. GREENSCREEN · SPROUT -->
   <article class="ugc-card">
     <div class="ugc-phone">
-      <button type="button" class="ugc-tag">greenscreen | app</button>
+      <button type="button" class="ugc-tag">greenscreen | sprout</button>
       <video class="ugc-video"
         src="images/ugc-prepAI-sprout.mp4"
         poster="images/ugc-prepAI-sprout-poster.jpg"
@@ -307,7 +307,7 @@
       <p>🧘🏽‍♀️Yoga Creator | Yoga Alliance Certified | 200-hour</p>
       <p>👧🏽👧🏾Big Sister Creator | Oldest of 6 siblings | Extra UGC Models!</p>
       <p>🏆Triathlete, 🎿Skiier, 🧗🏽‍♀️Climber, & 🏕️Backcountry Hiker</p>
-      <p>🎀👧🏾Black and Female Creator</p>
+      <p>🌎Globetrotter | I visit family in Norway and Czechia annually!</p>
       <p>📩 lisa@ugcwithlisaeshunwilson.com</p>
     <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry">WORK WITH ME</a>
   </div>
