UGC Email in header

--- a/ugc.html
+++ b/ugc.html
@@ -86,6 +86,14 @@
         UGC creator and strategist with 5+ years of content creation experience.
       </p>
 
+      <!-- Email (hero contact line) -->
+      <div class="ugc-hero-email">
+        📧
+        <a href="mailto:lisa@ugcwithlisaeshunwilson.com">
+          lisa@ugcwithlisaeshunwilson.com
+        </a>
+      </div>
+
       <div class="ugc-social-icons">
         <a href="https://www.instagram.com/ugcwithlisaeshunwilson" target="_blank" rel="noopener" class="icon-btn">
           <img src="images/icons/instagram.svg" alt="Instagram">
