Fix header and banner overlap + svg icons

--- a/ugc.html
+++ b/ugc.html
@@ -28,7 +28,7 @@
 <meta property="og:title" content="UGC with Lisa">
 <meta property="og:description" content="High-quality content to promote high-quality products.">
 <meta property="og:image" content="https://www.yogawithlisa.ai/images/ugc.jpg">
-<meta property="og:url" content="https://www.yogawithlisa.ai/ugc.html">
+<meta property="og:url" content="https://www.yogawithlisa.ai/ugc-hero.html">
 <meta property="og:type" content="website">
 
 <!-- Slack Rich Preview Enhancement -->
@@ -39,7 +39,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="UGC with Lisa">
 <meta name="twitter:description" content="High-quality content to promote high-quality products.">
-<meta name="twitter:image" content="https://www.yogawithlisa.ai/images/ugc.jpg">
+<meta name="twitter:image" content="https://www.yogawithlisa.ai/images/ugc-hero.jpg">
 </head>
 
 <body class="page-ugc">
