Yoga with Lisa Login page updates

--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="signup.html">START YOUR FREE TRIAL TODAY</a>
       <a class="btn btn-dark btn-pill btn-wide"
-     href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
-     target="_blank" rel="noopener">
-     JOIN OUR SLACK COMMUNITY
+     href="https://account.venmo.com/u/yogawithlisaai">
+     MAKE A DONATION
      </a>
    </div>
     </div>
