--- a/login.html
+++ b/login.html
@@ -98,26 +98,20 @@
 	<div class="plan-stack">
 
 <a class="btn btn-pill btn-dark btn-wide"
-   href="signin.html">Join our Mailing List</a>
-
-<a class="btn btn-pill btn-dark btn-wide" 
-   href="signin.html">Subscribe Now | Monthly Plan – $16.99/mo</a>
-
-<a class="btn btn-pill btn-dark btn-wide" 
-   href="signin.html">Subscribe Now | Annual Plan – $169.99/year</a>
+   href="signin.html">Make an account</a>
 
 <!-- Venmo Donation -->
 <a class="btn btn-pill btn-dark btn-wide"
    href="https://venmo.com/code?user_id=4476070791219179164&created=1764358269.647224&printed=1"
    target="_blank" rel="noopener noreferrer">
-   One-Time Donation
+   Make a donation
 </a>
 
 <!-- Tokens / Crypto -->
 <a class="btn btn-pill btn-dark btn-wide"
    href="images/crypto.jpg"
    target="_blank" rel="noopener noreferrer">
-   Pay with Crypto
+   Contribute with Crypto
 </a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
