UGC header and video carousel update

--- a/ugc.html
+++ b/ugc.html
@@ -74,7 +74,10 @@
 
     <!-- Right: Name + title + location + blurb + icons -->
     <div class="ugc-hero-copy">
-      <h1 class="ugc-hero-name">Lisa Eshun-Wilson</h1>
+      <h1 class="ugc-hero-name">
+      <span class="ugc-name-first">Lisa</span><br>
+      <span class="ugc-name-last">Eshun-Wilson</span>
+      </h1>
 
       <div class="ugc-hero-title">UGC Creator &amp; Strategist</div>
 
@@ -172,7 +175,7 @@
       <!-- Video 1 -->
       <div class="ugc-reel" aria-label="UGC video 1">
         <video class="ugc-reel-video"
-               src="videos/ugc-cadence.mp4"
+               src="images/ugc-cadence.mp4"
                playsinline
                muted
                controls
@@ -183,7 +186,7 @@
       <!-- Video 2 -->
       <div class="ugc-reel" aria-label="UGC video 2">
         <video class="ugc-reel-video"
-               src="videos/ugc-crest.mp4"
+               src="images/ugc-crest.mp4"
                playsinline
                muted
                controls
@@ -205,7 +208,7 @@
       <!-- Video 4 -->
       <div class="ugc-reel" aria-label="UGC video 4">
         <video class="ugc-reel-video"
-               src="videos/ugc-alo.mp4"
+               src="images/ugc-alo.mp4"
                playsinline
                muted
                controls
@@ -216,7 +219,7 @@
       <!-- Video 5 -->
       <div class="ugc-reel" aria-label="UGC video 5">
         <video class="ugc-reel-video"
-               src="videos/ugc-sprout.mp4"
+               src="images/ugc-sprout.mp4"
                playsinline
                muted
                controls
