--- a/ugc.html
+++ b/ugc.html
@@ -22,6 +22,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 <!-- Memberstack webflow package -->
 <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 
@@ -157,10 +161,10 @@
   })();
 </script>
 
-<!-- =================== UGC Video Examples Carousel =================== -->
+<!-- =================== UGC Video Section 1 Niche 1 =================== -->
 <section class="ugc-videos card" aria-label="UGC video examples">
   <div class="ig-head">
-    <h3>ugc video examples</h3>
+    <h3>ugc videos</h3>
     <a class="btn btn-pill btn-outline"
        href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry"
        target="_blank" rel="noopener">
@@ -169,7 +173,7 @@
   </div>
 
   <div class="ugc-wrap" data-carousel="ugc-videos">
-    <button class="ugc-nav ugc-prev" aria-label="Previous">‹</button>
+    #<button class="ugc-nav ugc-prev" aria-label="Previous">‹</button>
 
     <div class="ugc-track">
       <!-- Video 1 -->
@@ -180,7 +184,7 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">skit | travel</div>
+        <div class="ugc-pill">skit | Cadence</div>
       </div>
 
       <!-- Video 2 -->
@@ -191,21 +195,10 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">product demo</div>
+        <div class="ugc-pill">product demo | Crest</div>
       </div>
 
       <!-- Video 3 -->
-      <div class="ugc-reel" aria-label="UGC video 3">
-        <video class="ugc-reel-video"
-               src="videos/ugc-lipbutter.mp4"
-               playsinline
-               muted
-               controls
-               preload="metadata"></video>
-        <div class="ugc-pill">testimonial</div>
-      </div>
-
-      <!-- Video 4 -->
       <div class="ugc-reel" aria-label="UGC video 4">
         <video class="ugc-reel-video"
                src="images/ugc-alo.mp4"
@@ -213,10 +206,39 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">broll w/VO</div>
+        <div class="ugc-pill">broll w/VOi | Alo</div>
       </div>
 
-      <!-- Video 5 -->
+    #<button class="ugc-nav ugc-next" aria-label="Next">›</button>
+  </div>
+</section>
+
+<!-- =================== UGC Video Section 2 Niche 2  =================== -->
+<section class="ugc-videos card" aria-label="UGC video examples">
+  <div class="ig-head">
+    <h3>ugc videos</h3>
+    <a class="btn btn-pill btn-outline"
+       href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry"
+       target="_blank" rel="noopener">
+      WORK WITH ME
+    </a>
+  </div>
+
+  <div class="ugc-wrap" data-carousel="ugc-videos">
+    #<button class="ugc-nav ugc-prev" aria-label="Previous">‹</button>
+
+      <!-- Video 1 -->
+      <div class="ugc-reel" aria-label="UGC video 4">
+        <video class="ugc-reel-video"
+               src="images/ugc-richlips.mp4"
+               playsinline
+               muted
+               controls
+               preload="metadata"></video>
+        <div class="ugc-pill">testimonial | Rich Lips</div>
+      </div>
+
+      <!-- Video 2 -->
       <div class="ugc-reel" aria-label="UGC video 5">
         <video class="ugc-reel-video"
                src="images/ugc-sprout.mp4"
@@ -224,13 +246,14 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">greenscreen</div>
+        <div class="ugc-pill">greenscreen | Srout</div>
       </div>
     </div>
 
-    <button class="ugc-nav ugc-next" aria-label="Next">›</button>
+    #<button class="ugc-nav ugc-next" aria-label="Next">›</button>
   </div>
 </section>
+
 
 <!-- =================== UGC Offer Banner =================== -->
 <section class="membership" aria-label="membership">
