Hide next buttons

--- a/ugc.html
+++ b/ugc.html
@@ -173,7 +173,7 @@
   </div>
 
   <div class="ugc-wrap" data-carousel="ugc-videos">
-    #<button class="ugc-nav ugc-prev" aria-label="Previous">‹</button>
+    <--button class="ugc-nav ugc-prev" aria-label="Previous">‹</button-->
 
     <div class="ugc-track">
       <!-- Video 1 -->
@@ -225,7 +225,9 @@
   </div>
 
   <div class="ugc-wrap" data-carousel="ugc-videos">
-    #<button class="ugc-nav ugc-prev" aria-label="Previous">‹</button>
+    <!--
+    <button class="ugc-nav ugc-prev" aria-label="Previous">‹</button>
+    -->
 
       <!-- Video 1 -->
       <div class="ugc-reel" aria-label="UGC video 4">
@@ -250,7 +252,9 @@
       </div>
     </div>
 
-    #<button class="ugc-nav ugc-next" aria-label="Next">›</button>
+    <!--
+    <button class="ugc-nav ugc-next" aria-label="Next">›</button>
+    -->
   </div>
 </section>
 
