Hide all next buttons

--- a/ugc.html
+++ b/ugc.html
@@ -293,7 +293,7 @@
   </div>
 
   <div class="ig-wrap">
-    <button class="ig-nav ig-prev" aria-label="Previous">‹</button>
+    <!-- <button class="ig-nav ig-prev" aria-label="Previous">‹</button> -->
 
     <div class="ig-track" id="igTrack">
       <!-- Replace these image paths with your own (local images or CDN) -->
@@ -329,7 +329,7 @@
       </a>
     </div>
 
-    <button class="ig-nav ig-next" aria-label="Next">›</button>
+    <!-- <button class="ig-nav ig-next" aria-label="Next">›</button> -->
   </div>
 </section>
 
@@ -362,7 +362,7 @@
   </div>
 
   <div class="ig-wrap">
-    <button class="ig-nav ig-prev" aria-label="Previous">‹</button>
+    <!-- <button class="ig-nav ig-prev" aria-label="Previous">‹</button> --> 
 
     <div class="ig-track" id="igTrack">
       <!-- Replace these image paths with your own (local images or CDN) -->
@@ -398,7 +398,7 @@
       </a>
     </div>
 
-    <button class="ig-nav ig-next" aria-label="Next">›</button>
+    <!-- <button class="ig-nav ig-next" aria-label="Next">›</button> -->
   </div>
 </section>
 
