UGC video section debug

--- a/ugc.html
+++ b/ugc.html
@@ -173,7 +173,7 @@
   </div>
 
   <div class="ugc-wrap" data-carousel="ugc-videos">
-    <--button class="ugc-nav ugc-prev" aria-label="Previous">‹</button-->
+    <!-- <button class="ugc-nav ugc-prev" aria-label="Previous">‹</button -->
 
     <div class="ugc-track">
       <!-- Video 1 -->
@@ -206,10 +206,10 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">broll w/VOi | Alo</div>
+        <div class="ugc-pill">broll w/VO | Alo</div>
       </div>
 
-    #<button class="ugc-nav ugc-next" aria-label="Next">›</button>
+    <!-- <button class="ugc-nav ugc-next" aria-label="Next">›</button> -->
   </div>
 </section>
 
@@ -248,7 +248,8 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">greenscreen | Srout</div>
+        <div class="ugc-pill">greenscreen | Sprout</div>
+        <video class="ugc-reel-video"
       </div>
     </div>
 
