--- a/ugc.html
+++ b/ugc.html
@@ -126,7 +126,7 @@
 
   <!-- Intro Section -->
   <section class="intro container">
-    <h2>You've come to the right place.</h2>   
+    <!-- <h2>You've come to the right place.</h2> -->   
 </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
