Added Acting training

--- a/ugc.html
+++ b/ugc.html
@@ -179,7 +179,7 @@
       <!-- Video 1 -->
       <div class="ugc-reel" aria-label="UGC video 1">
         <video class="ugc-reel-video"
-               src="images/ugc-cadence.mp4"
+               src="videos/ugc-cadence.mp4"
                playsinline
                muted
                controls
@@ -190,7 +190,7 @@
       <!-- Video 2 -->
       <div class="ugc-reel" aria-label="UGC video 2">
         <video class="ugc-reel-video"
-               src="images/ugc-crest.mp4"
+               src="videos/ugc-crest.mp4"
                playsinline
                muted
                controls
@@ -201,19 +201,20 @@
       <!-- Video 3 -->
       <div class="ugc-reel" aria-label="UGC video 4">
         <video class="ugc-reel-video"
-               src="images/ugc-alo.mp4"
+               src="videos/ugc-alo.mp4"
                playsinline
                muted
                controls
                preload="metadata"></video>
         <div class="ugc-pill">broll w/VO | Alo</div>
       </div>
-
+    </div> <!-- /.ugc-track -->
+  </div> <!-- /.ugc-wrap -->
     <!-- <button class="ugc-nav ugc-next" aria-label="Next">›</button> -->
   </div>
 </section>
 
-<!-- =================== UGC Video Section 2 Niche 2  =================== -->
+<!-- =================== UGC Video Section 2 Niche 2 =================== -->
 <section class="ugc-videos card" aria-label="UGC video examples">
   <div class="ig-head">
     <h3>ugc videos</h3>
@@ -225,14 +226,13 @@
   </div>
 
   <div class="ugc-wrap" data-carousel="ugc-videos">
-    <!--
-    <button class="ugc-nav ugc-prev" aria-label="Previous">‹</button>
-    -->
+    <!-- <button class="ugc-nav ugc-prev" aria-label="Previous">‹</button> -->
 
+    <div class="ugc-track">
       <!-- Video 1 -->
       <div class="ugc-reel" aria-label="UGC video 4">
         <video class="ugc-reel-video"
-               src="images/ugc-richlips.mp4"
+               src="videos/ugc-lipbutter.mp4"
                playsinline
                muted
                controls
@@ -243,22 +243,18 @@
       <!-- Video 2 -->
       <div class="ugc-reel" aria-label="UGC video 5">
         <video class="ugc-reel-video"
-               src="images/ugc-sprout.mp4"
+               src="videos/ugc-sprout.mp4"
                playsinline
                muted
                controls
                preload="metadata"></video>
         <div class="ugc-pill">greenscreen | Sprout</div>
-        <video class="ugc-reel-video"
       </div>
     </div>
 
-    <!--
-    <button class="ugc-nav ugc-next" aria-label="Next">›</button>
-    -->
+    <!-- <button class="ugc-nav ugc-next" aria-label="Next">›</button> -->
   </div>
 </section>
-
 
 <!-- =================== UGC Offer Banner =================== -->
 <section class="membership" aria-label="membership">
@@ -270,10 +266,13 @@
     ✅ UGC Creator & Strategist | Create high-converting content that sells.     
     </p>
     <p>
-    ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.</p>
+    ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.
+    </p>
     <p>
+    ✅ UGC Mastery Academy Pro Certified | Trained in performance-driven content generation systems and testing.
+    </p>
     <p>
-    ✅ UGC Mastery Academy Pro Certified | Trained in performance-driven content generation systems and testing.</p>
+    ✅ Acting & On-Camera Training | Studied script reading, presence, and performance.</p>
     <p>
     ✅ Results-driven & Focused | Boost engagement for short or long-form content.</p>
     <p>
