Update intro video location

--- a/ugc.html
+++ b/ugc.html
@@ -68,8 +68,8 @@
     <div class="ugc-hero-video">
       <video
         class="ugc-hero-video-el"
-        src="images/ugc-intro.mp4"
-        poster="images/ugc-intro-poster.jpg"
+        src="videos/ugc-intro.mp4"
+        poster="videos/ugc-intro-poster.jpg"
         playsinline
         muted
         controls>
