Add back video posters

--- a/ugc.html
+++ b/ugc.html
@@ -180,7 +180,8 @@
       <div class="ugc-reel" aria-label="UGC video 1">
         <video class="ugc-reel-video"
                src="videos/ugc-cadence.mp4"
-               playsinline
+               poster="images/ugc-cadence-poster.jpg"
+	       playsinline
                muted
                controls
                preload="metadata"></video>
@@ -191,6 +192,7 @@
       <div class="ugc-reel" aria-label="UGC video 2">
         <video class="ugc-reel-video"
                src="videos/ugc-crest.mp4"
+               poster="images/ugc-crest-poster.jpg"
                playsinline
                muted
                controls
@@ -202,6 +204,7 @@
       <div class="ugc-reel" aria-label="UGC video 4">
         <video class="ugc-reel-video"
                src="videos/ugc-alo.mp4"
+               poster="images/ugc-alo-poster.jpg"
                playsinline
                muted
                controls
@@ -233,6 +236,7 @@
       <div class="ugc-reel" aria-label="UGC video 4">
         <video class="ugc-reel-video"
                src="videos/ugc-lipbutter.mp4"
+               poster="images/ugc-lipbutter-poster.jpg"
                playsinline
                muted
                controls
@@ -244,6 +248,7 @@
       <div class="ugc-reel" aria-label="UGC video 5">
         <video class="ugc-reel-video"
                src="videos/ugc-sprout.mp4"
+               uposter="images/ugc-prepAI-sprout-poster.jpg"
                playsinline
                muted
                controls
