UGC page new edits u

--- a/ugc.html
+++ b/ugc.html
@@ -248,7 +248,7 @@
       <div class="ugc-reel" aria-label="UGC video 5">
         <video class="ugc-reel-video"
                src="videos/ugc-sprout.mp4"
-               uposter="images/ugc-prepAI-sprout-poster.jpg"
+               poster="images/ugc-prepAI-sprout-poster.jpg"
                playsinline
                muted
                controls
