New changes at 11 am

--- a/ugc.html
+++ b/ugc.html
@@ -26,9 +26,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-<!-- Memberstack webflow package -->
-<script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
-
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content="UGC with Lisa">
 <meta property="og:description" content="High-quality content to promote high-quality products.">
@@ -69,7 +66,7 @@
       <video
         class="ugc-hero-video-el"
         src="videos/ugc-intro.mp4"
-        poster="videos/ugc-intro-poster.jpg"
+        poster="images/ugc-intro-poster.jpg"
         playsinline
         muted
         controls>
