hero text sizing update

--- a/ugc.html
+++ b/ugc.html
@@ -92,12 +92,12 @@
       </p>
 
       <!-- Email (hero contact line) -->
-      <div class="ugc-hero-email">
-        📧
-        <a href="mailto:lisa@ugcwithlisaeshunwilson.com">
-          lisa@ugcwithlisaeshunwilson.com
-        </a>
-      </div>
+      <!-- <div class="ugc-hero-email">
+       <!--  📧
+        <!-- <a href="mailto:lisa@ugcwithlisaeshunwilson.com">
+          lisa@ugcwithlisaeshunwilson.com -->
+        </a> -->
+      </div> --> 
 
       <div class="ugc-social-icons">
         <a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="icon-btn">
